@@ -1,76 +1,77 @@
 package com.chrionline.ui.controller;
 
 import com.chrionline.client.Client;
-import com.chrionline.service.RecaptchaConfig;
 import com.chrionline.protocol.MessageProtocol;
 import com.chrionline.protocol.Request;
 import com.chrionline.protocol.Response;
 import com.chrionline.ui.ClientSession;
 import com.chrionline.ui.ErrorHandler;
 import com.chrionline.ui.SceneManager;
-import com.chrionline.ui.security.RecaptchaLoopbackServer;
 import javafx.animation.KeyFrame;
 import javafx.animation.Timeline;
 import javafx.application.Platform;
-import javafx.concurrent.Worker;
 import javafx.concurrent.Task;
 import javafx.fxml.FXML;
+import javafx.geometry.VPos;
+import javafx.scene.canvas.Canvas;
+import javafx.scene.canvas.GraphicsContext;
 import javafx.scene.control.Button;
 import javafx.scene.control.Label;
 import javafx.scene.control.PasswordField;
-import javafx.scene.control.TextField;
-import javafx.scene.control.ProgressIndicator;
-import javafx.scene.web.WebEngine;
-import javafx.scene.web.WebView;
-import org.kordamp.ikonli.javafx.FontIcon;
 import javafx.scene.control.ProgressIndicator;
 import javafx.scene.control.TextField;
 import javafx.scene.layout.StackPane;
+import javafx.scene.paint.Color;
+import javafx.scene.text.Font;
+import javafx.scene.text.FontWeight;
+import javafx.scene.text.TextAlignment;
 import javafx.util.Duration;
-import javafx.scene.web.WebEngine;
-import javafx.scene.web.WebView;
-import netscape.javascript.JSObject;
 import org.json.JSONObject;
+import org.kordamp.ikonli.javafx.FontIcon;
+
+import java.util.Random;
 
 public class LoginController {
-
-    @FXML private TextField emailField;
-    @FXML private PasswordField passwordField;
-
-    @FXML private Label emailError;
-    @FXML private Label passwordError;
-    @FXML private Label globalError;
-    @FXML private StackPane recaptchaContainer;
-    @FXML private javafx.scene.layout.VBox recaptchaBox;
-    @FXML private Label recaptchaHintLabel;
-
-    @FXML private Button loginButton;
-    @FXML private ProgressIndicator loadingIndicator;
 
     private static final String EMAIL_REGEX = "^[A-Za-z0-9+_.-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$";
     private static final int MIN_PASSWORD = 8;
 
-    @FXML private TextField passwordTextField;
-    @FXML private Button togglePasswordButton;
-    @FXML private FontIcon togglePasswordIcon;
-
     private static boolean lockoutActive = false;
     private static int lockoutSecondsRemaining = 0;
-    private Timeline lockoutTimeline;
-    private boolean recaptchaEnabled = false;
-    private String recaptchaToken;
-    private WebEngine recaptchaEngine;
-    private Timeline recaptchaPollTimeline;
-
-    // Security enhancement variables (STATIC to persist across screen transitions)
     private static int failedLoginAttempts = 0;
     private static boolean ipBlocked = false;
     private static boolean captchaRequired = false;
 
+    @FXML private TextField emailField;
+    @FXML private PasswordField passwordField;
+    @FXML private TextField passwordTextField;
+    @FXML private Button togglePasswordButton;
+    @FXML private FontIcon togglePasswordIcon;
+
+    @FXML private Label emailError;
+    @FXML private Label passwordError;
+    @FXML private Label globalError;
+
+    @FXML private StackPane captchaContainer;
+    @FXML private javafx.scene.layout.VBox captchaBox;
+    @FXML private javafx.scene.layout.VBox captchaPanel;
+    @FXML private Label captchaHintLabel;
+    @FXML private TextField captchaAnswerField;
+    @FXML private Button captchaRefreshButton;
+    @FXML private Button captchaToggleButton;
+
+    @FXML private Button loginButton;
+    @FXML private ProgressIndicator loadingIndicator;
+
+    private Timeline lockoutTimeline;
+    private String captchaId;
+    private String captchaText;
+    private boolean captchaPanelOpen = false;
+
     @FXML
     public void initialize() {
         passwordTextField.textProperty().bindBidirectional(passwordField.textProperty());
-        initializeRecaptcha();
+        initializeCaptchaState();
 
         if (ipBlocked) {
             showIpBlockedMessage();
@@ -89,9 +90,14 @@ public class LoginController {
             updateLoginButtonState();
         });
         passwordTextField.textProperty().addListener((obs, ov, nv) -> updateLoginButtonState());
+        captchaAnswerField.textProperty().addListener((obs, ov, nv) -> updateLoginButtonState());
 
         emailField.focusedProperty().addListener((obs, oldVal, focused) -> {
-            if (!focused) validateEmailField();
+            if (!focused) {
+                if (validateEmailField()) {
+                    restorePersistedSecurityState(emailField.getText().trim());
+                }
+            }
         });
         passwordField.focusedProperty().addListener((obs, oldVal, focused) -> {
             if (!focused) validatePasswordField();
@@ -103,7 +109,10 @@ public class LoginController {
         passwordField.setOnAction(e -> handleLogin());
         passwordTextField.setOnAction(e -> handleLogin());
         emailField.setOnAction(e -> handleLogin());
+        captchaAnswerField.setOnAction(e -> handleLogin());
+
         updateLoginButtonState();
+        restorePersistedSecurityState(null);
     }
 
     @FXML
@@ -116,6 +125,19 @@ public class LoginController {
             passwordField.setVisible(true);
             passwordTextField.setVisible(false);
             togglePasswordIcon.setIconLiteral("fas-eye-slash");
+        }
+    }
+
+    @FXML
+    private void refreshCaptcha() {
+        fetchCaptchaChallenge(true);
+    }
+
+    @FXML
+    private void toggleCaptchaPanel() {
+        setCaptchaPanelOpen(!captchaPanelOpen);
+        if (captchaPanelOpen && (captchaId == null || captchaId.isBlank())) {
+            fetchCaptchaChallenge(true);
         }
     }
 
@@ -133,6 +155,21 @@ public class LoginController {
             return;
         }
 
+        if (captchaRequired) {
+            if (captchaId == null || captchaId.isBlank()) {
+                setCaptchaPanelOpen(true);
+                fetchCaptchaChallenge(true);
+                ErrorHandler.showFieldError(globalError, "Chargez puis saisissez le CAPTCHA avant de continuer.");
+                return;
+            }
+            if (captchaAnswerField.getText() == null || captchaAnswerField.getText().trim().isEmpty()) {
+                setCaptchaPanelOpen(true);
+                ErrorHandler.showFieldError(globalError, "Entrez le texte du CAPTCHA.");
+                ErrorHandler.showInlineError(captchaAnswerField, "CAPTCHA requis");
+                return;
+            }
+        }
+
         setLoading(true);
 
         Task<Response> loginTask = new Task<>() {
@@ -148,8 +185,9 @@ public class LoginController {
                 JSONObject payload = new JSONObject();
                 payload.put("email", email);
                 payload.put("password", password);
-                if (recaptchaEnabled && recaptchaToken != null && !recaptchaToken.isBlank()) {
-                    payload.put("recaptchaToken", recaptchaToken);
+                if (captchaRequired) {
+                    payload.put("captchaId", captchaId);
+                    payload.put("captchaAnswer", captchaAnswerField.getText().trim());
                 }
                 return client.send(new Request(MessageProtocol.ACTION_LOGIN, payload));
             }
@@ -166,11 +204,9 @@ public class LoginController {
                     session.setUserId(payload.has("userId") ? payload.getInt("userId") : null);
                     session.setUsername(payload.optString("username", ""));
                     session.setEmail(payload.optString("email", ""));
-                    String role = payload.optString("role", "CLIENT");
-                    session.setRole(com.chrionline.model.User.Role.valueOf(role));
+                    session.setRole(com.chrionline.model.User.Role.valueOf(payload.optString("role", "CLIENT")));
                 } catch (Exception ignored) {
                 }
-                // Reset security counters on successful login
                 resetSecurityCounters();
                 Platform.runLater(SceneManager::showHome);
                 return;
@@ -186,21 +222,29 @@ public class LoginController {
             if (msg.toLowerCase().contains("trop de tentatives")) {
                 int seconds = extractSecondsFromMessage(msg);
                 startLockout(seconds > 0 ? seconds : 30);
+                if (failedLoginAttempts >= 3 || payload.optBoolean("captchaRequired", false)) {
+                    captchaRequired = true;
+                    showCaptchaIfNeeded();
+                    fetchCaptchaChallenge(true);
+                }
                 return;
             }
             if (ErrorHandler.isSessionExpiredMessage(msg)) {
                 ErrorHandler.handleSessionExpired();
                 return;
             }
+
             String lower = msg.toLowerCase();
             if (lower.contains("non verifie")) {
                 SceneManager.showEmailVerification(email);
                 return;
             }
-            if (lower.contains("recaptcha")) {
-                resetRecaptcha();
-                ErrorHandler.showErrorDialog("Verification reCAPTCHA",
-                        msg.isBlank() ? "Veuillez valider le reCAPTCHA avant de vous connecter." : msg);
+            if (lower.contains("captcha")) {
+                captchaRequired = true;
+                showCaptchaIfNeeded();
+                fetchCaptchaChallenge(true);
+                ErrorHandler.showErrorDialog("Verification CAPTCHA",
+                    msg.isBlank() ? "Veuillez resoudre le CAPTCHA avant de vous connecter." : msg);
                 return;
             }
             if (lower.contains("suspend")) {
@@ -208,12 +252,9 @@ public class LoginController {
                 return;
             }
 
-            // Handle failed login attempts with progressive security measures
             handleFailedLoginAttempt();
-
-            resetRecaptcha();
             ErrorHandler.showErrorDialog("Connexion echouee",
-                    "Identifiants incorrects. Verifiez votre email et mot de passe.");
+                "Identifiants incorrects. Verifiez votre email et mot de passe.");
         });
 
         loginTask.setOnFailed(event -> {
@@ -225,7 +266,6 @@ public class LoginController {
                 ErrorHandler.showErrorDialog("Timeout", "La requete a expire. Verifiez votre connexion.");
                 return;
             }
-            resetRecaptcha();
             ErrorHandler.showErrorDialog("Serveur indisponible", "Serveur indisponible. Verifiez votre connexion.");
             if (emailField.getScene() != null) {
                 ErrorHandler.showServerUnavailableBanner(emailField.getScene(), this::handleLogin);
@@ -242,17 +282,29 @@ public class LoginController {
         SceneManager.showRegister();
     }
 
+    @FXML
+    private void handleForgotPassword() {
+        SceneManager.showForgotPasswordRequest();
+    }
+
     private void setLoading(boolean loading) {
         loginButton.setDisable(loading || lockoutActive);
         loadingIndicator.setVisible(loading);
         loadingIndicator.setManaged(loading);
+        captchaRefreshButton.setDisable(loading);
+        if (captchaToggleButton != null) {
+            captchaToggleButton.setDisable(loading);
+        }
     }
 
     private void updateLoginButtonState() {
         boolean hasEmail = emailField.getText() != null && !emailField.getText().trim().isEmpty();
         String pwd = passwordField.isVisible() ? passwordField.getText() : passwordTextField.getText();
         boolean hasPwd = pwd != null && !pwd.isBlank();
-        boolean captchaValid = !captchaRequired || !recaptchaEnabled || (recaptchaToken != null && !recaptchaToken.isBlank());
+        boolean captchaValid = !captchaRequired
+            || (captchaId != null && !captchaId.isBlank()
+            && captchaAnswerField.getText() != null
+            && !captchaAnswerField.getText().trim().isEmpty());
         if (!loadingIndicator.isVisible()) {
             loginButton.setDisable(ipBlocked || lockoutActive || !(hasEmail && hasPwd && captchaValid));
         }
@@ -307,9 +359,11 @@ public class LoginController {
             if (lockoutSecondsRemaining <= 0) {
                 lockoutActive = false;
                 ErrorHandler.clearFieldError(globalError);
-                // Keep CAPTCHA visible if required after lockout
                 if (captchaRequired) {
                     showCaptchaIfNeeded();
+                    if (captchaId == null || captchaId.isBlank()) {
+                        fetchCaptchaChallenge(true);
+                    }
                 }
                 updateLoginButtonState();
                 lockoutTimeline.stop();
@@ -324,12 +378,14 @@ public class LoginController {
 
     private void showLockoutMessage() {
         ErrorHandler.showFieldError(globalError,
-                "Trop de tentatives. Reessayez dans " + lockoutSecondsRemaining + "s.");
+            "Trop de tentatives. Reessayez dans " + lockoutSecondsRemaining + "s.");
     }
 
     private int extractSecondsFromMessage(String msg) {
         String digits = msg.replaceAll("[^0-9]", "");
-        if (digits.isEmpty()) return 0;
+        if (digits.isEmpty()) {
+            return 0;
+        }
         try {
             return Integer.parseInt(digits);
         } catch (NumberFormatException e) {
@@ -337,217 +393,267 @@ public class LoginController {
         }
     }
 
-    private void initializeRecaptcha() {
-        recaptchaEnabled = RecaptchaConfig.isClientConfigured();
-        if (!recaptchaEnabled || recaptchaBox == null || recaptchaContainer == null) {
-            return;
-        }
-
-        // Initialize UI based on persisted static state to avoid flicker
+    private void initializeCaptchaState() {
         if (captchaRequired) {
-            recaptchaBox.setVisible(true);
-            recaptchaBox.setManaged(true);
-            showRecaptchaHint("Validez le reCAPTCHA pour continuer.");
+            showCaptchaIfNeeded();
+            setCaptchaPanelOpen(false);
         } else {
-            recaptchaBox.setVisible(false);
-            recaptchaBox.setManaged(false);
-            showRecaptchaHint("");
-        }
-
-        WebView webView = new WebView();
-        webView.setContextMenuEnabled(false);
-        webView.setPrefWidth(304);
-        webView.setMinWidth(304);
-        webView.setMaxWidth(304);
-        webView.setPrefHeight(84);
-        webView.setMinHeight(84);
-        webView.setMaxHeight(84);
-        recaptchaContainer.getChildren().setAll(webView);
-
-        recaptchaEngine = webView.getEngine();
-        recaptchaEngine.getLoadWorker().stateProperty().addListener((obs, oldState, newState) -> {
-            if (newState == Worker.State.SUCCEEDED) {
-                JSObject window = (JSObject) recaptchaEngine.executeScript("window");
-                window.setMember("javaRecaptcha", new RecaptchaBridge());
-                startRecaptchaPolling();
-            }
-        });
-
-        try {
-            recaptchaEngine.load(RecaptchaLoopbackServer.startIfNeeded());
-        } catch (Exception e) {
-            recaptchaEnabled = false;
-            recaptchaBox.setVisible(false);
-            recaptchaBox.setManaged(false);
-            recaptchaContainer.getChildren().clear();
-        }
-        updateLoginButtonState();
-    }
-
-    private void resetRecaptcha() {
-        recaptchaToken = null;
-        updateLoginButtonState();
-        if (captchaRequired && recaptchaEnabled) {
-            showRecaptchaHint("Validez le reCAPTCHA pour continuer.");
-            recaptchaBox.setVisible(true);
-            recaptchaBox.setManaged(true);
-        } else {
-            showRecaptchaHint("");
-            if (recaptchaBox != null) {
-                recaptchaBox.setVisible(false);
-                recaptchaBox.setManaged(false);
-            }
-        }
-        if (recaptchaEngine != null) {
-            Platform.runLater(() -> {
-                try {
-                    recaptchaEngine.executeScript("if (window.grecaptcha) { grecaptcha.reset(); }");
-                } catch (Exception ignored) {
-                }
-            });
-        }
-    }
-
-    private void showRecaptchaHint(String message) {
-        if (recaptchaHintLabel == null) {
-            return;
-        }
-        boolean visible = message != null && !message.isBlank();
-        recaptchaHintLabel.setText(visible ? message : "");
-        recaptchaHintLabel.setVisible(visible);
-        recaptchaHintLabel.setManaged(visible);
-    }
-
-    public final class RecaptchaBridge {
-        public void onToken(String token) {
-            Platform.runLater(() -> {
-                recaptchaToken = token == null ? null : token.trim();
-                showRecaptchaHint("");
-                updateLoginButtonState();
-            });
-        }
-
-        public void onExpired() {
-            Platform.runLater(() -> {
-                recaptchaToken = null;
-                showRecaptchaHint("Le reCAPTCHA a expire. Veuillez le valider a nouveau.");
-                updateLoginButtonState();
-            });
-        }
-
-        public void onError(String message) {
-            Platform.runLater(() -> {
-                recaptchaToken = null;
-                showRecaptchaHint(message == null || message.isBlank()
-                        ? "Erreur reCAPTCHA. Veuillez reessayer."
-                        : message);
-                updateLoginButtonState();
-            });
+            hideCaptcha();
         }
     }
 
     private void handleFailedLoginAttempt() {
         failedLoginAttempts++;
-
-        // Progressive security measures based on failed attempts
         if (failedLoginAttempts >= 12) {
-            // 12+ failures: IP block + email notification
             ipBlocked = true;
             showIpBlockedMessage();
             sendSecurityAlertEmail();
             return;
-        } else if (failedLoginAttempts >= 9) {
-            // 9+ failures: 1 hour lockout
-            startLockout(3600); // 1 hour = 3600 seconds
-            captchaRequired = true;
-            showCaptchaIfNeeded();
-        } else if (failedLoginAttempts >= 6) {
-            // 6+ failures: 10 minute lockout
-            startLockout(600); // 10 minutes = 600 seconds
-            captchaRequired = true;
-            showCaptchaIfNeeded();
-        } else if (failedLoginAttempts >= 3) {
-            // 3+ failures: 1 minute lockout + CAPTCHA
-            startLockout(60); // 1 minute = 60 seconds
-            captchaRequired = true;
-            showCaptchaIfNeeded();
         }
-        // For 1-2 failures: no special measures, just normal error message
+        if (failedLoginAttempts >= 9) {
+            startLockout(3600);
+        } else if (failedLoginAttempts >= 6) {
+            startLockout(600);
+        } else if (failedLoginAttempts >= 3) {
+            startLockout(60);
+        }
+        if (failedLoginAttempts >= 3) {
+            captchaRequired = true;
+            showCaptchaIfNeeded();
+            fetchCaptchaChallenge(true);
+        }
     }
 
     private void showIpBlockedMessage() {
         ErrorHandler.showFieldError(globalError,
-                "Trop de tentatives de connexion. Votre acces est bloque pour securite. Un email de notification a ete envoye.");
+            "Trop de tentatives de connexion. Votre acces est bloque pour securite. Un email de notification a ete envoye.");
         loginButton.setDisable(true);
     }
 
     private void sendSecurityAlertEmail() {
-        // In a real implementation, this would send an email to the user
-        // For now, we'll just log it
-        System.out.println("SECURITY ALERT: Multiple failed login attempts detected. IP blocked.");
+        org.apache.logging.log4j.LogManager.getLogger(LoginController.class)
+            .warn("SECURITY ALERT: Multiple failed login attempts detected. IP blocked.");
     }
 
     private void showCaptchaIfNeeded() {
-        if (captchaRequired && recaptchaEnabled && recaptchaBox != null) {
-            recaptchaBox.setVisible(true);
-            recaptchaBox.setManaged(true);
-            showRecaptchaHint("Validez le reCAPTCHA pour continuer.");
-        }
+        captchaBox.setVisible(true);
+        captchaBox.setManaged(true);
+        setCaptchaPanelOpen(false);
+        showCaptchaHint("Cliquez sur le bouton pour ouvrir le panneau de verification.");
+    }
+
+    private void hideCaptcha() {
+        captchaBox.setVisible(false);
+        captchaBox.setManaged(false);
+        setCaptchaPanelOpen(false);
+        captchaContainer.getChildren().clear();
+        showCaptchaHint("");
+        captchaId = null;
+        captchaText = null;
+        captchaAnswerField.clear();
     }
 
     private void resetSecurityCounters() {
         failedLoginAttempts = 0;
         ipBlocked = false;
         captchaRequired = false;
-        recaptchaToken = null;
         lockoutActive = false;
         lockoutSecondsRemaining = 0;
+        captchaId = null;
+        captchaText = null;
+        captchaAnswerField.clear();
         if (lockoutTimeline != null) {
             lockoutTimeline.stop();
             lockoutTimeline = null;
         }
-        if (recaptchaBox != null) {
-            recaptchaBox.setVisible(false);
-            recaptchaBox.setManaged(false);
-        }
-        showRecaptchaHint("");
+        hideCaptcha();
         ErrorHandler.clearFieldError(globalError);
         updateLoginButtonState();
     }
 
-    private void startRecaptchaPolling() {
-        if (recaptchaPollTimeline != null) {
-            recaptchaPollTimeline.stop();
-        }
-        recaptchaPollTimeline = new Timeline(new KeyFrame(Duration.millis(400), e -> pollRecaptchaToken()));
-        recaptchaPollTimeline.setCycleCount(Timeline.INDEFINITE);
-        recaptchaPollTimeline.play();
+    private void restorePersistedSecurityState(String email) {
+        Task<Response> stateTask = new Task<>() {
+            @Override
+            protected Response call() throws Exception {
+                Client client = Client.getInstance();
+                client.connect();
+                JSONObject payload = new JSONObject();
+                if (email != null && !email.isBlank()) {
+                    payload.put("email", email);
+                }
+                return client.send(new Request(MessageProtocol.ACTION_GET_LOGIN_SECURITY_STATE, payload));
+            }
+        };
+
+        stateTask.setOnSucceeded(event -> applyPersistedSecurityState(stateTask.getValue()));
+        stateTask.setOnFailed(event -> updateLoginButtonState());
+
+        Thread thread = new Thread(stateTask, "login-security-state");
+        thread.setDaemon(true);
+        thread.start();
     }
 
-    private void pollRecaptchaToken() {
-        if (!recaptchaEnabled || recaptchaEngine == null) {
+    private void applyPersistedSecurityState(Response response) {
+        if (response == null || !response.isSuccess()) {
+            updateLoginButtonState();
             return;
         }
-        try {
-            Object token = recaptchaEngine.executeScript(
-                    "(window.grecaptcha && grecaptcha.getResponse) ? grecaptcha.getResponse() : ''");
-            String current = token == null ? "" : String.valueOf(token).trim();
-            String previous = recaptchaToken == null ? "" : recaptchaToken.trim();
-            if (!current.equals(previous)) {
-                recaptchaToken = current.isBlank() ? null : current;
-                if (recaptchaToken == null) {
-                    showRecaptchaHint("Validez le reCAPTCHA pour activer la connexion.");
-                } else {
-                    showRecaptchaHint("");
-                }
-                updateLoginButtonState();
+
+        JSONObject payload = response.getPayloadAsJsonObject();
+        failedLoginAttempts = payload.optInt("failures", failedLoginAttempts);
+        captchaRequired = payload.optBoolean("captchaRequired", false);
+        ipBlocked = payload.optBoolean("ipBlocked", false);
+
+        if (ipBlocked) {
+            int seconds = payload.optInt("ipBlockedSecondsRemaining", 0);
+            lockoutActive = false;
+            lockoutSecondsRemaining = 0;
+            if (lockoutTimeline != null) {
+                lockoutTimeline.stop();
+                lockoutTimeline = null;
             }
-        } catch (Exception ignored) {
+            showCaptchaIfNeeded();
+            if (captchaId == null || captchaId.isBlank()) {
+                fetchCaptchaChallenge(true);
+            }
+            ErrorHandler.showFieldError(globalError,
+                seconds > 0
+                    ? "Trop de tentatives. Votre acces est bloque pour securite pendant encore " + seconds + "s."
+                    : "Trop de tentatives de connexion. Votre acces est bloque pour securite.");
+            updateLoginButtonState();
+            return;
+        }
+
+        if (captchaRequired) {
+            showCaptchaIfNeeded();
+            if (captchaId == null || captchaId.isBlank()) {
+                fetchCaptchaChallenge(true);
+            }
+        } else {
+            hideCaptcha();
+        }
+
+        if (payload.optBoolean("lockoutActive", false)) {
+            startLockout(payload.optInt("lockoutSecondsRemaining", 0));
+        } else {
+            lockoutActive = false;
+            lockoutSecondsRemaining = 0;
+            if (lockoutTimeline != null) {
+                lockoutTimeline.stop();
+                lockoutTimeline = null;
+            }
+            ErrorHandler.clearFieldError(globalError);
+            updateLoginButtonState();
         }
     }
 
-    @FXML
-    private void handleForgotPassword() {
-        SceneManager.showForgotPasswordRequest();
+    private void fetchCaptchaChallenge(boolean force) {
+        if (!captchaRequired) {
+            return;
+        }
+        if (!force && captchaId != null && !captchaId.isBlank()) {
+            return;
+        }
+        setCaptchaPanelOpen(true);
+        showCaptchaHint("Chargement du CAPTCHA...");
+
+        Task<Response> captchaTask = new Task<>() {
+            @Override
+            protected Response call() throws Exception {
+                Client client = Client.getInstance();
+                client.connect();
+                return client.send(new Request(MessageProtocol.ACTION_GET_LOGIN_CAPTCHA, new JSONObject()));
+            }
+        };
+
+        captchaTask.setOnSucceeded(event -> {
+            Response response = captchaTask.getValue();
+            if (!response.isSuccess()) {
+                captchaId = null;
+                captchaText = null;
+                captchaContainer.getChildren().clear();
+                showCaptchaHint("Impossible de charger le CAPTCHA. Reessayez.");
+                updateLoginButtonState();
+                return;
+            }
+
+            JSONObject payload = response.getPayloadAsJsonObject();
+            captchaId = payload.optString("captchaId", "");
+            captchaText = payload.optString("captchaText", "");
+            captchaAnswerField.clear();
+            renderCaptcha(captchaText);
+            showCaptchaHint("Recopiez le texte de securite puis reconnectez-vous.");
+            updateLoginButtonState();
+        });
+
+        captchaTask.setOnFailed(event -> {
+            captchaId = null;
+            captchaText = null;
+            captchaContainer.getChildren().clear();
+            showCaptchaHint("Impossible de charger le CAPTCHA. Reessayez.");
+            updateLoginButtonState();
+        });
+
+        Thread thread = new Thread(captchaTask, "login-captcha-loader");
+        thread.setDaemon(true);
+        thread.start();
+    }
+
+    private void renderCaptcha(String text) {
+        Canvas canvas = new Canvas(320, 92);
+        GraphicsContext gc = canvas.getGraphicsContext2D();
+        gc.setFill(Color.web("#fff7ed"));
+        gc.fillRoundRect(0, 0, 320, 92, 14, 14);
+        gc.setStroke(Color.web("#fdba74"));
+        gc.setLineWidth(1.2);
+        gc.strokeRoundRect(1, 1, 318, 90, 14, 14);
+
+        Random random = new Random(text == null ? 0L : text.hashCode());
+        for (int i = 0; i < 11; i++) {
+            gc.setStroke(Color.rgb(244, 106 + random.nextInt(80), 61 + random.nextInt(120), 0.28));
+            gc.setLineWidth(1 + random.nextDouble() * 2.1);
+            gc.strokeLine(random.nextInt(320), random.nextInt(92), random.nextInt(320), random.nextInt(92));
+        }
+        for (int i = 0; i < 40; i++) {
+            gc.setFill(Color.rgb(71, 85, 105, 0.12 + (random.nextDouble() * 0.2)));
+            gc.fillOval(random.nextInt(320), random.nextInt(92), 2 + random.nextDouble() * 4, 2 + random.nextDouble() * 4);
+        }
+
+        gc.setTextAlign(TextAlignment.CENTER);
+        gc.setTextBaseline(VPos.CENTER);
+        gc.setFont(Font.font("Verdana", FontWeight.EXTRA_BOLD, 34));
+
+        char[] chars = text == null ? new char[0] : text.toCharArray();
+        for (int i = 0; i < chars.length; i++) {
+            double x = 42 + (i * 45) + random.nextInt(8);
+            double y = 46 + random.nextInt(18) - 9;
+            double angle = -18 + random.nextInt(37);
+            gc.save();
+            gc.translate(x, y);
+            gc.rotate(angle);
+            gc.setFill(i % 2 == 0 ? Color.web("#9a3412") : Color.web("#334155"));
+            gc.fillText(String.valueOf(chars[i]), 0, 0);
+            gc.restore();
+        }
+
+        captchaContainer.getChildren().setAll(canvas);
+    }
+
+    private void showCaptchaHint(String message) {
+        boolean visible = message != null && !message.isBlank();
+        captchaHintLabel.setText(visible ? message : "");
+        captchaHintLabel.setVisible(visible);
+        captchaHintLabel.setManaged(visible);
+    }
+
+    private void setCaptchaPanelOpen(boolean open) {
+        captchaPanelOpen = open;
+        if (captchaPanel != null) {
+            captchaPanel.setVisible(open);
+            captchaPanel.setManaged(open);
+        }
+        if (captchaToggleButton != null) {
+            captchaToggleButton.setText(open ? "Hide check" : "Open check");
+        }
     }
 }
